--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,13 @@
     display: block;
     float: left;
     align-content: left;
-    /* border: solid 1px #616161; */
-    /* border-collapse: collapse; */
-    /* border-spacing: 0; */
     margin-left:5%; 
     margin-right:auto;
+    margin-top:3%;
 }
 #series thead th {
+    border-top: solid 2px rgb(206, 206, 206);
+    border-bottom: solid 2px rgb(206, 206, 206);
     color: #000000;
     padding: 10px;
     text-align: center;
@@ -24,8 +24,14 @@
 }
 #series tbody td {
     background-color: #e7e7e7;
-    border: solid 2px rgb(206, 206, 206);
+    border-top: solid 2px rgb(206, 206, 206);
+    border-bottom: solid 2px rgb(206, 206, 206);
     color: rgb(0, 0, 0);
     padding: 10px;
     text-align: center;
+}
+
+#series-caption {
+    padding-left: 3%;
+    color: #000000;
 }
