--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
     border-bottom: solid 2px rgb(206, 206, 206);
     color: rgb(0, 0, 0);
     padding: 10px;
-    text-align: center;
+    text-align: left;
 }
 
 #series-caption {
