Entrega - 202210_Taller_TypeScript_1

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-#bar{
-    background-color: rgb(106, 187, 190);
-    display:flex;
-    align-items:center; 
+#bar {
+    background-color: rgb(106, 175, 190);
+    display: flex;
+    align-items: center;
 }
 
 
@@ -9,10 +9,11 @@
     display: block;
     float: left;
     align-content: left;
-    margin-left:5%; 
-    margin-right:auto;
-    margin-top:3%;
+    margin-left: 5%;
+    margin-right: auto;
+    margin-top: 3%;
 }
+
 #series thead th {
     border-top: solid 2px rgb(206, 206, 206);
     border-bottom: solid 2px rgb(206, 206, 206);
@@ -22,8 +23,9 @@
     text-shadow: 1px 1px 1px #fff;
     font-style: bold;
 }
+
 #series tbody td {
-    background-color: #e7e7e7;
+    background-color: #efeded;
     border-top: solid 2px rgb(206, 206, 206);
     border-bottom: solid 2px rgb(206, 206, 206);
     color: rgb(0, 0, 0);
